<resources>
    <string name="app_name">PholapSC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_thrid_fragment">Hello thrid fragment</string>
    <string name="perfilBasico">BASIC PROFILE</string>
    <string name="perfilInformacion">Here\'s a little bit about me. And so it goes on and on and on.</string>
    <string name="perfilInformacionPrivadaLabel">PRIVATE INFORMATION</string>
    <string name="generoPerfil">Male</string>
    <string name="nombrePerfil">Michael Jordan</string>
    <string name="locationPerfil">Av. Ladrón de Guevara 253, Quito 170525</string>
    <string name="emailPerfil">michael@jordan.com</string>
    <string name="phonePerfil">+1 510 486 1234</string>
    <string name="descripcionPerfil">Acme user since April 2017</string>
    <string name="tituloConfiguraciones">Configuraciones</string>
    <string name="btnPerfilConfiguraciones">Perfil</string>
    <string name="btnNotificacionesConfiguraciones">Notificaciones</string>
    <string name="btnMetodosDePagoConfiguraciones">Metodos de Pago</string>
    <string name="editTextCorreoElectronico">Correo Electrónico</string>
    <string name="editTextPassword">Password</string>
    <string name="btnNoTieneCuenta">¿No tienes cuenta?</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="textViewFacebook">Continuar con Facebook</string>
    <string name="textViewGoogle">Continuar con Google</string>
    <string name="title_activity_main_category">Main_Activity_Category</string>
    <string name="tab_text_1">Fotos</string>
    <string name="tab_text_2">Álbumes</string>
    <string name="tab_text_3">Sesiones</string>
    <string name="tituloImpresion">Impresion de Fotos</string>
    <string name="tab_text_fotos">Fotos</string>
    <string name="tab_text_albunes">Albunes</string>
    <string name="tab_text_sesiones">Sesiones</string>
    <string name="text_AgendarSesion">Agendar Sesión</string>
    <string name="text_Imprimir">Imprimir fotos</string>
    <string name="text_Configuraciones">Configuraciones</string>
    <string name="text_Cerrar_Sesion">CerrarSesión</string>

    <!-- Strings Sing In-->
    <string name="title_Crear_Cuenta">Crear una Cuenta</string>
    <string name="SingIn_Nombre">Nombre</string>
    <string name="SingIn_Apellido">Apellido</string>
    <string name="SingIn_NombreUsuario">Nombre de Usuario</string>
    <string name="SingIn_Correo">Correo Electrónico</string>
    <string name="SingIn_Contrasena">Contraseña</string>
    <string name="SingIn_R_Contrasena">Confirmar Contraseña</string>
    <string name="SingIn_btn_Registrar">Registrarse</string>
    <string name="SingIn_Terminos">Al registrarse, usted está de acuerdo con los Términos de servicio y Políticas de privacidad </string>
    <string name="SingIn_btnCuenta">Ya tienes una cuenta?</string>
    <string name="SignIn_Telefono">Teléfono</string>
    <string name="SignIn_Direccion">Direccion</string>
    <string-array name="generos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>

    <!-- Errores-->
    <string name="nombre_requerido">El nombre es requerido</string>
    <string name="apellido_requerido">El apellido es requerido</string>
    <string name="nombreUsuario_requerido">El nombre de usuario es requerido</string>
    <string name="telefono_requerido">El teléfono es requerido</string>
    <string name="direccion_requerido">La dirección es requerida</string>
    <string name="password_no_match">Las contraseñas no coinciden</string>
    <string name="direccionSesion_requerido">La dirección de la sesión es requerida</string>
    <string name="fechaSesion_requerido">La fecha de la sesión es requerida</string>
    <string name="horaSesion_requerido">La hora de la sesión es requerida</string>


    <!-- Strings List Sessions-->
    <string name="ListSession_Date">Thu Apr 13</string>
    <string name="ListSession_Hour">9:00 AM</string>
    <string name="ListSession_Places">Starbucks Coffee</string>
    <string name="ListSession_Dir">Central Starbucks Coffee</string>
    <!-- Strings Session-->
    <string name="Session_title">Sesiones de Fotos</string>
    <string name="Session_Location">Ingrese la ubicación</string>
    <string name="Session_Date">Ingrese la fecha</string>
    <string name="Session_Hour">Ingrese la hora</string>
    <string name="Session_Pack">Seleccione el paquete</string>
    <string name="Session_btn_Solicitar">Solicitar sesión</string>
    <string name="Session_Terminos">Al solicitar una sesión, usted está de acuerdo con los Términos de servicio y Políticas de privacidad </string>
    <string-array name="paquetes">
        <item>Boda</item>
        <item>Privado</item>
        <item>Formal</item>
        <item>Parejas</item>
    </string-array>

    <!-- Strings Info Foto-->
    <string name="InfoPhoto_title">Boda_1</string>
    <string name="InfoPhoto_description">Usuario x descripcion, descripcion,descripcion,descripcion...</string>

    <!-- Albumes -->
    <string name="titulo_album">Titulo del Album</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="textView_TitleBoda">Boda</string>
    <string name="textView_TitleRetrato">Retrato</string>
    <string name="textView_TitleDetalles">Detalles</string>

    <!-- Strings Log in (Main Activity) -->
    <string name="email_no_valid">Email no válido!</string>
    <string name="password_no_valid">La contraseña debe contener al menos 8 caracteres alfanuméricos</string>
    <string name="recordarme">Recordarme</string>

</resources>