<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:background="#50AEFF"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.241"
        app:srcCompat="@drawable/google_64px" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="283dp"
        android:layout_height="256dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/path929"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextCorreoElectronico"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/editTextCorreoElectronico"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreoElectronico" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="#8B0101"
        android:text="@string/btnIngresar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/btnNoTieneCuenta"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="@string/btnNoTieneCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:background="#50AEFF"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNoTieneCuenta"
        app:layout_constraintVertical_bias="0.656"
        app:srcCompat="@drawable/facebook_f_64px" />

    <TextView
        android:id="@+id/textViewFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewFacebook"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.428"
        tools:layout_editor_absoluteX="117dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewGoogle"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.428"
        tools:layout_editor_absoluteX="119dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>