<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txtViewFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ECC65148"
        android:text="@string/ListSession_Date"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="27dp"
        tools:text="@string/ListSession_Date" />

    <TextView
        android:id="@+id/txtViewHoraSessionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ListSession_Hour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtViewFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFecha"
        tools:text="@string/ListSession_Hour" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/txtViewHoraSessionList"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFecha"
        app:srcCompat="@android:drawable/status_bar_item_app_background" />

    <TextView
        android:id="@+id/txtViewDireccionSessionLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/ListSession_Places"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFecha"
        tools:text="@string/ListSession_Places"/>

    <TextView
        android:id="@+id/txtViewPaqueteListaSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ListSession_Dir"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtViewDireccionSessionLista"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDireccionSessionLista"
        tools:text="@string/ListSession_Dir"/>

    <ImageView
        android:id="@+id/imgViewBorrarSesion"
        android:layout_width="47dp"
        android:layout_height="58dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtViewDireccionSessionLista"
        app:srcCompat="@drawable/remove_50px" />
</androidx.constraintlayout.widget.ConstraintLayout>