<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:theme="@style/Theme.PholapSC.AppBarOverlay"
        android:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#474747"
            android:textSize="24sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="#9D0000"
            app:tabTextColor="#404040" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatingActionsMenu"
        android:layout_width="229dp"
        android:layout_height="390dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:fab_addButtonColorNormal="#ECC65148"
        app:fab_expandDirection="up"
        app:fab_labelStyle="@style/FloatStyle"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_Imprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:fab_colorNormal="#ECC65148"
            app:fab_colorPressed="#E6BC3E"
            app:fab_icon="@drawable/imprimirfotos48px"
            app:fab_size="mini"
            app:fab_title="@string/text_Imprimir"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_AgendarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#ECC65148"
            app:fab_colorPressed="#E6BC3E"
            app:fab_icon="@drawable/agendarsesion52px"
            app:fab_size="mini"
            app:fab_title="@string/text_AgendarSesion"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_Configuraciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#ECC65148"
            app:fab_colorPressed="#E6BC3E"
            app:fab_icon="@drawable/configuraciones48px"
            app:fab_size="mini"
            app:fab_title="@string/text_Configuraciones"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_Cerrar_Sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#ECC65148"
            app:fab_colorPressed="#E6BC3E"
            app:fab_icon="@drawable/cerrarsesion52px"
            app:fab_size="mini"
            app:fab_title="@string/text_Cerrar_Sesion"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>