<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayoutSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBarSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgViewBackBarSession"
                android:layout_width="36dp"
                android:layout_height="33dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/toolBarSession"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolBarSession"
                app:srcCompat="@drawable/back_64px" />

            <TextView
                android:id="@+id/textViewListSessionFotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Session_title"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgViewBackBarSession"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/Session_title"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="Ubicación:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/appBarLayoutSI"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutSI" />

    <AutoCompleteTextView
        android:id="@+id/autoTextUbicacion"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Session_Location"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/Session_Location" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Fecha:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/autoTextUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/autoTextUbicacion" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/Session_Date"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/autoTextUbicacion"
        tools:text="@string/Session_Date"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/autoTextUbicacion"
        app:srcCompat="@drawable/calendar_50px" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Hora:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/Session_Hour"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:text="@string/Session_Hour"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Paquete:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Session_Pack"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/btn_Solicitar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Session_btn_Solicitar"
        android:textColor="@color/white"
        android:background="@color/SingInButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextPack"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editTextPack" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Session_Terminos"
        android:textSize="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_Solicitar"
        app:layout_constraintStart_toStartOf="@+id/btn_Solicitar"
        app:layout_constraintTop_toBottomOf="@+id/btn_Solicitar" />


</android.support.constraint.ConstraintLayout>